Added Promethues, Grafana and Alerts

--- a/phishing-app/templates/app.yml
+++ b/phishing-app/templates/app.yml
@@ -11,6 +11,9 @@ spec:
   template:
     metadata:
       labels: { deployment: app, version: v1 }
+    annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "{{ .Values.app.servicePort }}"
     spec:
       containers:
       - name: {{ .Release.Name }}-django-app
@@ -35,6 +38,9 @@ spec:
   template:
     metadata:
       labels: { deployment: app, version: v2 }
+    annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "{{ .Values.app.servicePort }}"
     spec:
       containers:
       - name: {{ .Release.Name }}-django-app
