--- a/phishing-app/values.yaml
+++ b/phishing-app/values.yaml
@@ -10,7 +10,8 @@ app:
   servicePort: 8000
   targetPort: 8000
   replicaCount: 1
-
+  mountPath: "./"
+  
 model:
   version: "latest"
   servicePort: 5000
