Checkpoint: feedback endpoint works but feedback data is not visible yet

--- a/phishing-app/templates/app.yml
+++ b/phishing-app/templates/app.yml
@@ -24,6 +24,13 @@ spec:
         - configMapRef:
             name: {{ .Release.Name }}-app-config
         command: ["python3", "manage.py", "runserver", "0.0.0.0:{{ .Values.app.servicePort }}"]
+        volumeMounts:
+          - mountPath: {{ .Values.app.mountPath }}
+            name: test-volume
+      volumes:
+      - name: test-volume
+        persistentVolumeClaim:
+          claimName: pvc-app
 ---
 apiVersion: apps/v1
 kind: Deployment
