--- a/phishing-app/templates/model.yml
+++ b/phishing-app/templates/model.yml
@@ -14,6 +14,7 @@ spec:
         deployment: model
       annotations:
         prometheus.io/scrape: "true"
+        prometheus.io/path: "/metrics"
         prometheus.io/port: "{{ .Values.model.servicePort }}"
     spec:
       containers:
